--- a/src/app/buildOrder/templates/buildOrder.orderSummary.tpl.html
+++ b/src/app/buildOrder/templates/buildOrder.orderSummary.tpl.html
@@ -1127,133 +1127,132 @@
 	</div>
 </ui-view>
 <modal title="Enter User Details" visible="buildOrder.guestUserModal" id="guestUserModal" class="create-user-pop-up modal-pop-up">
-		<div class="search-blk">
-			<div uib-dropdown>
-				<ordercloud-search servicename="customer" controlleras="buildordersummary" placeholder="Search user" uib-dropdown-toggle></ordercloud-search>
-                <div class="search_dropdown" uib-dropdown-menu>
-                    <div class="searchelement"  ng-repeat="user in buildordersummary.list track by $index">
-                        <a class="search_result" ng-click="buildordersummary.selectUser(user)">
-                            <p>{{user.Username}}</p>
-                            <div>{{user.Email}}</div>
-                        </a>
-                    </div>
-                </div>
+		<div ng-init="buildordersummary.userEdit=false;buildordersummary.showUser=false">
+			<div class="search-blk">
+				<div uib-dropdown>
+					<ordercloud-search servicename="customer" controlleras="buildordersummary" placeholder="Search user" uib-dropdown-toggle></ordercloud-search>
+	                <div class="search_dropdown" uib-dropdown-menu>
+	                    <div class="searchelement"  ng-repeat="user in buildordersummary.list track by $index" ng-click="buildordersummary.userEdit=false">
+	                        <a class="search_result" ng-click="buildordersummary.selectUser(user);buildordersummary.userEdit=false">
+	                            <p>{{user.Username}}</p>
+	                            <div>{{user.Email}}</div>
+	                        </a>
+	                    </div>
+	                </div>
+				</div>
+				<a class="create" ng-click="buildordersummary.userEdit=!buildordersummary.userEdit;buildordersummary.showUser=false;buildordersummary.clearData()">Create New User</a>
 			</div>
-			<a class="create" ng-click="userEdit=!userEdit;showUser=false;clearData()">Create New User</a>
-		</div>
-		{{showUser}}
-		{{userEdit}}
-		<div ng-hide="!showUser" class="showUserDetails">
-			<p>First Name: <span>{{buildordersummary.showDetails.FirstName}}</span></p>
-			<p>Last Name: <span>{{buildordersummary.showDetails.LastName}}</span></p>
-			<p>email Address: <span>{{buildordersummary.showDetails.Email}}</span></p>
-			<p>Phone Number: <span>{{buildordersummary.showDetails.PhoneNumber}}</span></p>
-		</div>
-		<div class="button-list user-top">
-			<button type="button" class="save" ng-hide="!showUser" ng-click="buildordersummary.openUser(buildordersummary.showDetails)">Login</button>
-			<button type="button" ng-click="buildordersummary.statechange()">Continue as Guest</button>
-		</div>
-		<div ng-hide="!userEdit">
-		{{userEdit}}
-			<form name="GuestUserForm" class="create-user">
-				<h1>Enter user Sign Up details</h1>
-				<div class="inline-div user-top">
-						<div>
-							<p>Enter username<span class="star">*</span></p>
-							<input type="text" ng-model="create.Username" name="username" ng-required="userEdit" ng-class="{error: GuestUserForm.$submitted && GuestUserForm.username.$invalid}" />
-						</div>
-				</div>
-				<div class="create-user-container" id="top">
+			<div ng-hide="!buildordersummary.showUser" class="showUserDetails">
+				<p>First Name: <span>{{buildordersummary.showDetails.FirstName}}</span></p>
+				<p>Last Name: <span>{{buildordersummary.showDetails.LastName}}</span></p>
+				<p>email Address: <span>{{buildordersummary.showDetails.Email}}</span></p>
+				<p>Phone Number: <span>{{buildordersummary.showDetails.PhoneNumber}}</span></p>
+			</div>
+			<div class="button-list user-top">
+				<button type="button" class="save" ng-hide="!buildordersummary.showUser" ng-click="buildordersummary.openUser(buildordersummary.showDetails)">Login</button>
+				<button type="button" ng-click="buildordersummary.statechange()">Continue as Guest</button>
+			</div>
+			<div ng-hide="!buildordersummary.userEdit">
+				<form name="GuestUserForm" class="create-user">
+					<h1>Enter user Sign Up details</h1>
 					<div class="inline-div user-top">
-						<div>
-							<p>First Name<span class="star">*</span></p>
-							<input type="text" ng-model="create.FirstName" name="fname" ng-required="userEdit" ng-class="{error: GuestUserForm.$submitted && GuestUserForm.fname.$invalid}"/>
+							<div>
+								<p>Enter username<span class="star">*</span></p>
+								<input type="text" ng-model="create.Username" name="username" ng-required="userEdit" ng-class="{error: GuestUserForm.$submitted && GuestUserForm.username.$invalid}" />
+							</div>
+					</div>
+					<div class="create-user-container" id="top">
+						<div class="inline-div user-top">
+							<div>
+								<p>First Name<span class="star">*</span></p>
+								<input type="text" ng-model="create.FirstName" name="fname" ng-required="userEdit" ng-class="{error: GuestUserForm.$submitted && GuestUserForm.fname.$invalid}"/>
+							</div>
+							<div>
+								<p>Last Name<span class="star">*</span></p>
+								<input type="text" ng-model="create.LastName" name="lname" ng-required="userEdit" ng-class="{error: GuestUserForm.$submitted && GuestUserForm.lname.$invalid}" />
+							</div>
 						</div>
-						<div>
-							<p>Last Name<span class="star">*</span></p>
-							<input type="text" ng-model="create.LastName" name="lname" ng-required="userEdit" ng-class="{error: GuestUserForm.$submitted && GuestUserForm.lname.$invalid}" />
+						<p>{{selectedUser}}</p>
+						<div class="inline-div user-top">
+							<div>
+								<p>Enter email address<span class="star">*</span></p>
+								<input type="text" ng-model="create.Email" name="email" ng-required="userEdit" ng-class="{error: GuestUserForm.$submitted && GuestUserForm.email.$invalid}"/>
+							</div>
+							<div class="contact-num user-top">
+								<p>Phone number<span class="star">*</span></p>
+								<input type="number" ng-model="create.Phone1" name="phone1" ng-required="userEdit" ng-class="{error: GuestUserForm.$submitted && GuestUserForm.phone1.$invalid}" ng-minlength="3" max-length="3" />
+								<input type="number" ng-model="create.Phone2" name="phone2" ng-required="userEdit" ng-class="{error: GuestUserForm.$submitted && GuestUserForm.phone2.$invalid}" ng-minlength="3" max-length="3" />
+								<input type="number" ng-model="create.Phone3" name="phone3" ng-required="userEdit" ng-class="{error: GuestUserForm.$submitted && GuestUserForm.phone3.$invalid}" ng-minlength="4" max-length="4" />
+							</div>
+						</div>
+						<div class="inline-div user-top">
+							<div>
+								<p>Enter password<span class="star">*</span></p>
+								<input type="password" ng-model="create.Password" name="password" ng-required="userEdit" ng-class="{error: GuestUserForm.$submitted && GuestUserForm.password.$invalid}" />
+							</div>
+							<div>
+								<p>Confirm password<span class="star">*</span></p>
+								<input type="password" ng-model="create.Password" name="cpassword" ng-required="userEdit" ng-class="{error: GuestUserForm.$submitted && GuestUserForm.cpassword.$invalid}" />
+							</div>
+						</div>
+						<h1>Enter user address details</h1>
+						<div class="inline-div user-top">
+							<div>
+								<p>Company name</p>
+								<input type="text" ng-model="createaddr.CompanyName"/>
+							</div>
+							<div>
+								<p>ZIP Code<span class="star">*</span></p>
+								<input class="zip-code" type="number" ng-model="createaddr.Zip" name="zip" ng-required="userEdit" ng-class="{error: GuestUserForm.$submitted && GuestUserForm.zip.$invalid}"/>
+							</div>
+						</div>
+						<div class="user-addr user-top">
+						 <div>
+						 	<p>Address 1<span class="star">*</span></p>
+							<input type="text" ng-model="createaddr.Street1" name="street1" ng-required="userEdit" ng-class="{error: GuestUserForm.$submitted && GuestUserForm.street1.$invalid}"/>
+						 </div>
+						</div>
+						<div class="user-addr user-top">
+							<div>
+								<p>Address 2</p>
+								<input type="text" ng-model="createaddr.Street2"/>	
+							</div>
+						</div>
+						<div class="inline-div user-top">
+							<div>
+								<p>City<span class="star">*</span></p>
+								<input type="text"  ng-model="createaddr.City" name="city" ng-required="userEdit" ng-class="{error: GuestUserForm.$submitted && GuestUserForm.city.$invalid}" />
+							</div>
+							<div>
+								<p>State<span class="star">*</span></p>
+								<input type="text" ng-model="createaddr.State" name="state" ng-required="userEdit" ng-class="{error: GuestUserForm.$submitted && GuestUserForm.state.$invalid}" class="state-code" />
+							</div>
+							<div>
+								<p>Country<span class="star">*</span></p>
+								<input type="text" ng-model="createaddr.Country" name="country" ng-required="userEdit" ng-class="{error: GuestUserForm.$submitted && GuestUserForm.country.$invalid}" />
+							</div>
+						</div>
+						<div class="user-top addr-dropdown">
+							<div>
+							 <input type="checkbox" id="shippingaddr" ng-model="createaddr.IsShipping" class="checkbox-custom">
+							 <label  for="shippingaddr" class="checkbox-custom-label">Shipping Address</label>
+							</div>
+							<div>
+								 <input  type="checkbox" id="Billingaddr" ng-model="createaddr.IsBilling" class="checkbox-custom">
+								 <label  for="Billingaddr" class="checkbox-custom-label">Billing Address</label>
+							</div>
+							<div>
+								 <input  type="checkbox" id="Defaultaddr" ng-model="createaddr.IsDefault" class="checkbox-custom">
+								 <label  for="Defaultaddr" class="checkbox-custom-label">Default Address</label>
+							</div>
 						</div>
 					</div>
-					<p>{{selectedUser}}</p>
-					<div class="inline-div user-top">
-						<div>
-							<p>Enter email address<span class="star">*</span></p>
-							<input type="text" ng-model="create.Email" name="email" ng-required="userEdit" ng-class="{error: GuestUserForm.$submitted && GuestUserForm.email.$invalid}"/>
-						</div>
-						<div class="contact-num user-top">
-							<p>Phone number<span class="star">*</span></p>
-							<input type="number" ng-model="create.Phone1" name="phone1" ng-required="userEdit" ng-class="{error: GuestUserForm.$submitted && GuestUserForm.phone1.$invalid}" ng-minlength="3" max-length="3" />
-							<input type="number" ng-model="create.Phone2" name="phone2" ng-required="userEdit" ng-class="{error: GuestUserForm.$submitted && GuestUserForm.phone2.$invalid}" ng-minlength="3" max-length="3" />
-							<input type="number" ng-model="create.Phone3" name="phone3" ng-required="userEdit" ng-class="{error: GuestUserForm.$submitted && GuestUserForm.phone3.$invalid}" ng-minlength="4" max-length="4" />
-						</div>
+					<div class="button-list user-top">
+						<button type="button" class="save" ng-click="buildOrder.createUser(create, createaddr, GuestUserForm)">SAVE</button>
+						<button type="button" ng-click="userEdit=!userEdit">CANCEL</button>
 					</div>
-					<div class="inline-div user-top">
-						<div>
-							<p>Enter password<span class="star">*</span></p>
-							<input type="password" ng-model="create.Password" name="password" ng-required="userEdit" ng-class="{error: GuestUserForm.$submitted && GuestUserForm.password.$invalid}" />
-						</div>
-						<div>
-							<p>Confirm password<span class="star">*</span></p>
-							<input type="password" ng-model="create.Password" name="cpassword" ng-required="userEdit" ng-class="{error: GuestUserForm.$submitted && GuestUserForm.cpassword.$invalid}" />
-						</div>
-					</div>
-					<h1>Enter user address details</h1>
-					<div class="inline-div user-top">
-						<div>
-							<p>Company name</p>
-							<input type="text" ng-model="createaddr.CompanyName"/>
-						</div>
-						<div>
-							<p>ZIP Code<span class="star">*</span></p>
-							<input class="zip-code" type="number" ng-model="createaddr.Zip" name="zip" ng-required="userEdit" ng-class="{error: GuestUserForm.$submitted && GuestUserForm.zip.$invalid}"/>
-						</div>
-					</div>
-					<div class="user-addr user-top">
-					 <div>
-					 	<p>Address 1<span class="star">*</span></p>
-						<input type="text" ng-model="createaddr.Street1" name="street1" ng-required="userEdit" ng-class="{error: GuestUserForm.$submitted && GuestUserForm.street1.$invalid}"/>
-					 </div>
-					</div>
-					<div class="user-addr user-top">
-						<div>
-							<p>Address 2</p>
-							<input type="text" ng-model="createaddr.Street2"/>	
-						</div>
-					</div>
-					<div class="inline-div user-top">
-						<div>
-							<p>City<span class="star">*</span></p>
-							<input type="text"  ng-model="createaddr.City" name="city" ng-required="userEdit" ng-class="{error: GuestUserForm.$submitted && GuestUserForm.city.$invalid}" />
-						</div>
-						<div>
-							<p>State<span class="star">*</span></p>
-							<input type="text" ng-model="createaddr.State" name="state" ng-required="userEdit" ng-class="{error: GuestUserForm.$submitted && GuestUserForm.state.$invalid}" class="state-code" />
-						</div>
-						<div>
-							<p>Country<span class="star">*</span></p>
-							<input type="text" ng-model="createaddr.Country" name="country" ng-required="userEdit" ng-class="{error: GuestUserForm.$submitted && GuestUserForm.country.$invalid}" />
-						</div>
-					</div>
-					<div class="user-top addr-dropdown">
-						<div>
-						 <input type="checkbox" id="shippingaddr" ng-model="createaddr.IsShipping" class="checkbox-custom">
-						 <label  for="shippingaddr" class="checkbox-custom-label">Shipping Address</label>
-						</div>
-						<div>
-							 <input  type="checkbox" id="Billingaddr" ng-model="createaddr.IsBilling" class="checkbox-custom">
-							 <label  for="Billingaddr" class="checkbox-custom-label">Billing Address</label>
-						</div>
-						<div>
-							 <input  type="checkbox" id="Defaultaddr" ng-model="createaddr.IsDefault" class="checkbox-custom">
-							 <label  for="Defaultaddr" class="checkbox-custom-label">Default Address</label>
-						</div>
-					</div>
-				</div>
-				<div class="button-list user-top">
-					<button type="button" class="save" ng-click="buildOrder.createUser(create, createaddr, GuestUserForm)">SAVE</button>
-					<button type="button" ng-click="userEdit=!userEdit">CANCEL</button>
-				</div>
-			</form>
+				</form>
+			</div>
 		</div>
 		
 </modal>
