--- a/src/app/buildOrder/templates/buildOrder.pdp.tpl.html
+++ b/src/app/buildOrder/templates/buildOrder.pdp.tpl.html
@@ -3,7 +3,7 @@
 		<div class="upselloverlay" ng-show="!buildOrder.upsell || !buildOrder.similar" ng-click="buildOrder.HideUpsellNCross()"></div>
 		<div class="buildOrder-pdp" ng-if="buildOrder.UpsellSimilar!=true">
 			<h1>
-				<a ng-click="gotoplp()" ng-if="buildOrder.searchType!='Products'">
+				<a ng-click="gotoplp()" ng-if="buildOrder.searchType!='Products' && buildOrder.searchType!='Workshop'">
 					<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 					viewBox="0 0 14 21" style="enable-background:new 0 0 14 21;" xml:space="preserve">
 						<style type="text/css">
@@ -15,8 +15,19 @@
 					</svg>
 					Back
 				</a>
-		
-				<a ng-click="gotoplp()" ng-if="buildOrder.searchType=='Products'">
+				<a ng-click="gotoplp()" ng-if="buildOrder.searchType=='Products' && buildOrder.searchType!='Workshop'">
+					<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+					viewBox="0 0 14 21" style="enable-background:new 0 0 14 21;" xml:space="preserve">
+						<style type="text/css">
+							.st0{fill:#8B8E96;}
+						</style>
+						<g>
+							<path d="M0.7,18.3l7.8-7.8L0.7,2.7L3,0.3l10.2,10.2L3,20.7L0.7,18.3z"/>
+						</g>
+					</svg>
+					Back 
+				</a>
+				<a ui-sref="home({event:buildOrder.eventDate})" ng-if="buildOrder.searchType=='Workshop'">
 					<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 					viewBox="0 0 14 21" style="enable-background:new 0 0 14 21;" xml:space="preserve">
 						<style type="text/css">
