--- a/src/app/buildOrder/templates/buildOrder.plp.tpl.html
+++ b/src/app/buildOrder/templates/buildOrder.plp.tpl.html
@@ -150,7 +150,7 @@
 						</span> -->
 						</h3>
 						<div class="btn-grp">
-							<button class="lightgray-btn">ADD TO CALENDAR</button>
+							<!-- <button class="lightgray-btn">ADD TO CALENDAR</button> -->
 							<button ng-if="event.xp.IsWorkshop" class="green-btn" ng-click="buildOrder.GetSkuevents(event.xp.ProductCode, event.ID)">Register Now</button>
 							<button ng-if="!event.xp.IsWorkshop" class="purple-btn" ng-click="buildOrder.GetSkuevents(event.xp.ProductCode, event.ID)">MORE DETAILS</button>
 						</div>
