--- a/src/app/common/search/templates/search.tpl.html
+++ b/src/app/common/search/templates/search.tpl.html
@@ -1,4 +1,4 @@
-<form name="OrderCloudSearchFrom" ng-submit="showProducts()">
+<form name="OrderCloudSearchFrom" ng-submit="showProducts()" class="searchtpl">
     <div class="form-group">
 		 <!-- <input type="search" class="form-control" placeholder="{{placeholder}}" ng-model="searchTerm"/> -->
         <input type="search" class="form-control" placeholder="{{placeholder}}" ng-model="search.query" autocomplete="off" ng-minlength="3"/>
