--- a/src/app/buildOrder/templates/buildOrder.left.tpl.html
+++ b/src/app/buildOrder/templates/buildOrder.left.tpl.html
@@ -13,7 +13,7 @@
 			<h2>{{buildOrderLeft.spendingAccounts[0].Name}}</h2> <p>{{buildOrderLeft.spendingAccounts[0].Balance | currency}}</p>
 			<h3>Member since {{buildOrderLeft.spendingAccounts[0].StartDate | date:'yyyy'}}</h3>
 		</div>
-		<ul class="order-details" ng-class="buildOrderLeft.guest ? 'disable' : 'nothing'">
+		<ul class="order-details" ng-class="buildOrder.disable ? 'disable' : 'nothing'">
 			<li>
 				<a ui-sref="custInfo({ID:buildOrderLeft.list.ID})">
 				<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
