--- a/src/app/buildOrder/less/buildOrder.less
+++ b/src/app/buildOrder/less/buildOrder.less
@@ -30,7 +30,7 @@ button {
 .buildOrderPlp-main, .buildOrderPdp-main, .buildOrderSummary-main{
 	position: absolute;
     left: 18%;
-    width: 62%;
+    width:51%;
     top: 75px;
     bottom: 50px;
     background-color: @color20;
@@ -97,6 +97,33 @@ input.error, .errorCity {
 			cursor: not-allowed;
 			opacity: 0.6;
 		}
+		.guestbtn{
+			text-align: center;
+			margin-top: 10%;
+			button {
+				float: none;
+				.helvetica-bold;
+				font-size: 12.5px ;
+				color: @primary-dark-color;
+				border:1px solid @primary-dark-color;
+				background-color: @color0;
+				padding: 4px 10px 4px;
+				border-radius: 7px;
+				text-transform: uppercase;
+				.background-fade;
+				&:hover {
+					background-color: @base-bg-purple-light;
+					color: @color0;
+				}
+				&:disabled {
+				background-color: @color0;
+					&:hover {
+						background-color: @color0;
+						color: @primary-dark-color;
+					}
+				}
+			}
+			}
 		.position-common;
 		.order-for {
 			padding: 20px 0 0 0px;
@@ -233,7 +260,7 @@ input.error, .errorCity {
 				color: @primary-dark-color;
 				border:1px solid @primary-dark-color;
 				background-color: @color0;
-				padding: 6px 10px 3px;
+				padding: 4px 10px 4px;
 				border-radius: 7px;
 				.background-fade;
 				&:hover {
@@ -411,7 +438,7 @@ input.error, .errorCity {
 		overflow: hidden;
 		.buildOrder-pdp {
 			position: absolute;
-			top: 3px;
+			top:0px;
 			bottom: 70px;
 			overflow-x: hidden;
 			overflow-y: auto;
@@ -1180,6 +1207,36 @@ input.error, .errorCity {
 			width: 96%;
 			margin: auto;
 			background: @color20;
+			.back-common{
+				    .helvetica-regular;
+				    font-size: 14px;
+				    color: #54565d;
+				   margin-top:-2px;
+				    a{
+				    	color: #54565d;
+					    cursor: pointer;
+					    text-decoration: none;
+						svg{
+					    width: 15px;
+					    height: 10px;
+					    color: rgb(84, 86, 93);
+					    display: inline-block;
+					    transform: rotate(180deg);
+					    margin-top: 5px;
+    					float: left;
+					    }
+				    }
+				    &:hover{
+				    	a{
+				    		color:#a77bca;
+				    		text-decoration:underline;
+				    	}
+				    	svg{
+				    		fill:#a77bca;
+				    	}
+				    }
+				   
+				}
 		}
 		input{
 			border-top:none;
@@ -1361,6 +1418,20 @@ input.error, .errorCity {
 										width:71%;
 										ul {
 											li {
+											.row{
+											div{
+												display:inline-block;
+												max-width:70%;
+													&:last-child{
+														max-width:30%;
+													    width: 30%;
+													    line-height: 1;
+													    float: right;
+													    padding-right: 10px;
+													    text-align: right;
+													}
+												}
+											}
 												h5 {
 													margin: 0;
 													font-size: 14px;
@@ -1372,6 +1443,11 @@ input.error, .errorCity {
 													font-size: 13px;
 													line-height:16px;
 													.helvetica-regular;
+													svg{
+													    fill: #ccc;
+    width: 10px;
+    height: 10px;
+													}
 												}
 												&:last-child {
 													margin-top: 10px;
@@ -1681,7 +1757,7 @@ input.error, .errorCity {
 		}
 	}
 	.oms-plp-right {
-		width: 20%;
+		width: 31%;
 		right: 0;
 		.position-common;
 		right: 0;
@@ -1713,7 +1789,7 @@ input.error, .errorCity {
 		& > h1 {
 			.helvetica-bold;
 			font-size: 15px;
-			padding: 20px 0 20px 20px;
+			padding: 20px 0 10px 20px;
 			background-color: @primary-dark-color;
 			margin: 0 0 20px;
 			color: @color0;
@@ -1751,7 +1827,7 @@ input.error, .errorCity {
 				background-color: #fff;
 			}
 			.prod-variants-del{
-				 margin: 10px 0;
+				 margin:5px 0 15px 0;
 				.prod-variants{
 					margin:0;
 					.helvetica-bold;
@@ -1767,41 +1843,77 @@ input.error, .errorCity {
 				}
 			}
 			.note-edit{
-				height:30px;
+				    width:71%;
+   					float: left;
+   					margin-bottom:15px;
 				button{
 					background:none;
-					width:50%;
+					
 					.in-block;
 				    vertical-align: middle;
 					text-align: left;
 					svg{
-						width: 25px;
-						height: 25px;
+						width: 22px;
+						height:17px;
 						fill:@base-bg-purple-light;
 						&.save-icon{
 							width: 18px;
 							height: 18px;
 						}
 					}
-					&.edit-icon{
-						width:23%;
+					
+				}
+				.edit-icon{
+						   width:20%;
+					    display: inline-block;
+					    border: 1px solid #8c58b5;
+					    color: #8c58b5;
+					    border-radius: 5px;
+					    font-size: 12px;
+					    padding-top: 2px;
+					    margin-left:1%;
 					}
-				}
-				.notes{
-					text-align:center;
-					margin-top:0;
-				}
+					.save-icon{
+						    width: 20%;
+						    display: inline-block;
+						    border: 1px solid #8c58b5;
+						    color: #8c58b5;
+						    border-radius: 5px;
+						    font-size: 12px;
+						    padding-top: 2px;
+						    margin-left: 1%;
+						    height: 27px;
+						    padding: 7px 0 0 1px;
+						    line-height: 12px;
+					    svg{
+					    	 width: 12px;
+						    height: 12px;
+						    margin: 0 4px 0 3px;
+					    }
+					}
+					.notes {
+						.helvetica-bold;
+						font-size: 11px;
+						color: @color0;
+						padding: 5px 10px;
+						.background-fade;
+						float: right;
+						margin:0 5px 0 0;
+						background-color: @base-bg-purple-light;
+						text-transform:uppercase;
+					}
 				form{
-					width:72%;
-					.in-block;
+					    width:49%;
+					    .in-block;
 					input{
-						width:100%;
-						border:1px solid @color21;
-						font-size: 12px;
-						line-height:25px;
-						.helvetica-medium;
-						color:@color1;
-						height:29px;
+							width: 100%;
+						    border: 1px solid #EAEAEA;
+						    font-size: 12px;
+						    line-height: 25px;
+						   .helvetica-medium;
+						    color: #54565d;
+						    height: 28px;
+						    border-radius: 5px;
 						&:focus {
 							border-color: #aaa;
 						}
@@ -1852,16 +1964,13 @@ input.error, .errorCity {
 			.notes {
 				.helvetica-bold;
 				font-size: 11px;
-				color: @primary-dark-color;
-				border: 1px solid @primary-dark-color;
+				color: @color0;
 				padding: 5px 10px;
 				.background-fade;
 				float: right;
-				margin: 10px 5px 0 0;
-				&:hover {
-					background-color: @base-bg-purple-light;
-					color: @color0;
-				}
+				margin:0 5px 0 0;
+				background-color: @base-bg-purple-light;
+				text-transform:uppercase;
 			}
 		}
 		.receipient-details {
@@ -1873,7 +1982,7 @@ input.error, .errorCity {
 			.panel-heading {
 				background-color: @color11;
 				padding: 0;
-				margin-top: 10px;
+				margin-top:5px;
 				.panel-title a {
 					text-decoration: none;
 					display: block;
@@ -1937,9 +2046,9 @@ input.error, .errorCity {
 						svg.close {
 							display: none;
 						}
-						span {
+						span,i {
 							.helvetica-medium;
-							color: @color2;
+							color:#000;
 						}
 					}
 				}
@@ -1957,8 +2066,8 @@ input.error, .errorCity {
 				   font-size:14px;
 				 }
 				 .buyers-list{
-				 	float:right;
-				 	margin-top:24px;
+				 	float:left;
+				 	margin-top:20px;
 				 	width:53%;
 				 	label{
 				 		font-size:14px;
@@ -1977,13 +2086,14 @@ input.error, .errorCity {
 						width: 40px;
 						border: 1px solid @color21;
 						height:29px;
+						width:100%;
 						&:focus {
 							border-color: #aaa;
 						}
 					}
 				}
 					.address-cart{
-							display: block;
+							float:left;
 							margin-top: 15px;
 							height:10px;
 							width:100%;
@@ -2009,6 +2119,8 @@ input.error, .errorCity {
 				.receipient-name,
 				.location-recipientName {
 					margin: 15px 0px;
+					width:100%;
+					float:left;
 					  h3{
 					  	.helvetica-bold;
 						font-size: 15px;
@@ -2020,11 +2132,32 @@ input.error, .errorCity {
 						float:left;
 						width:100%;	
 					  }
-					.firstNm {
-						margin-right: 3%;
-					}
+					  h1 {
+							font-size: 13px;
+							line-height:20px;
+							.helvetica-medium;
+							margin:0px 0 5px;
+							color: @color3;
+						}
+					  	.qty{
+					  		width:25%;
+					  		margin-right:2%;
+					  		input{
+					  			width:100%;
+					  		}
+					  	}
+						.recipient-firstnm,.recipient-firstnm1{
+						    width: 34%;
+						    margin-right:2%;
+						    input{
+						    	width:100%;
+						    }
+						}
+						.recipient-firstnm1{
+							margin-right:0;
+						}
 					div {
-						width: 47%;
+						
 						display: inline-block;
 						p {
 							margin: 0px 0 5px 0;
@@ -2050,14 +2183,16 @@ input.error, .errorCity {
 					}
 				}
 				.receipient-location {
-					margin: 15px 0px;
+					margin:0 0 15px ;
+					width:100%;
+					float:left;
 					label.radio-common {
-						font-size: 11px;
+						font-size: 13px;
 						line-height:11px;
 						.helvetica-regular;
 						color: @color3;
 					    margin: 0;
-						width: 49%;
+						width:40%;
 						>label{
 							margin-bottom:0px !important;
 						}
@@ -2089,6 +2224,17 @@ input.error, .errorCity {
 						line-height:20px;
 						display: inline-block;
 						margin: 0;
+					}
+
+					.estimate-total{
+						font-size:17px;
+						@color1;
+						.helvetica-bold;
+						span{
+						  font-size:17px;
+						   @color1;	
+						   .helvetica-bold;
+						}
 					}
 					h4,
 					h5 {
@@ -2137,15 +2283,17 @@ input.error, .errorCity {
 					
 						.zipcont{
 							padding:0px;
-							width:30%;
+							width:25%;
+							
 							.zipCode {
 							input{
 								height:29px;
+								border-radius:5px;
 							}
 						  }
 						}
 						.delivery-date{
-							width:68%;
+							width:43%;
 							padding: 0 0 0 14px;
 							.btn{
 								padding:4px 12px;
@@ -2172,25 +2320,7 @@ input.error, .errorCity {
 						}
 						
 					}
-					.location-state,
-					.location-city,
-					.zipCode,
-					.delivery-date,
-					.location-contact {
-						.in-block;
-						
-						p {
-							font-size: 13px;
-							.helvetica-medium;
-							margin-bottom: 5px;
-							color: @color3;
-							line-height:20px;
-						}
-						input[type="search"],
-						input[type="text"] {
-							width: 100%;
-						}
-					}
+					
 					.location-addressL1 {
 						h1 {
 							font-size: 12px;
@@ -2209,9 +2339,7 @@ input.error, .errorCity {
 							    float: left;
 							    width: 100%;
 							.location-city {
-								width: 59%;
-							    margin-right: 3%;
-							    padding: 0px;
+								
 								.form-control{
 										padding:0px 5px;
 										height:29px;
@@ -2264,9 +2392,6 @@ input.error, .errorCity {
 								}
 							}
 							.location-state {
-								width: 35%;
-							    float: right;
-							    padding: 0px;
 								select {
 									height: 25px;
 									border: 1px solid @color6;
@@ -2313,19 +2438,7 @@ input.error, .errorCity {
 						}
 					}
 					}
-					.location-contact {
-						input {
-							.in-block;
-							width: 29%;
-							border: 1px solid @color21;
-							margin-right: 3%;
-							height:29px;
-							font-size:12px;
-							&:focus {
-								border-color: #aaa;
-							}
-						}
-					}
+					
 					.location-note {
 						&.add-card{
 							h3{
@@ -2454,9 +2567,45 @@ input.error, .errorCity {
 									margin: 10px 0 15px 0px;
 								    float: left;
 								    width: 100%;
+								    input{
+								    	width:46%;
+								    	margin-right:4%;
+								    	border-radius:5px;
+								    }
+								    .street,.state{
+								    	margin-right:0; 
+								    }
+								    .locations-city,.locations-state{
+								    	width:50%;
+								    	float:left;
+								    	margin:15px 0;
+								    	input{
+								    		 width: 93%;
+								    		 margin-right: 12%;
+								    	}
+								    }
+								    	.location-contact {
+								    		width:100%;
+								    		float:left;
+											input{
+												width:31%;
+												border: 1px solid @color21;
+												height:29px;
+												font-size:12px;
+												margin-right:0;
+												&:focus {
+													border-color: #aaa;
+												}
+											}
+									}
 							}
 							.hospital-search,.willCall-search{
-								margin:15px 0;
+							margin:0 0 15px 0;
+							float:left;
+							width:100%;
+							input{
+								border-radius:5px;
+							}
 							}
 							
 						}
@@ -2467,12 +2616,12 @@ input.error, .errorCity {
 					.willCall-address {
 						input[type="search"],
 						input[type="text"] {
-							width: @width0;
-							border: 1px solid @color21;
+						 border: 1px solid @color21;
 							.helvetica-regular;
 							font-size: 12px;
 							height:29px;
 							background:#fff;
+							
 							&:focus {
 								border-color: #aaa;
 							}
@@ -2534,9 +2683,10 @@ input.error, .errorCity {
 							}
 						}
 						.pick-up-date{
-							width: 68%;
-						    float: right;
-						    padding: 0 0 0 14px;
+							    width: 43%;
+							    float: right;
+							    padding: 0 0 0 14px;
+							    margin-right: 32%;
 							.btn{
 								  padding:4px 12px;
 								  line-height:10px;
@@ -2555,8 +2705,9 @@ input.error, .errorCity {
 			}
 		}
 		.popover{
-			width:92%;
-			left:4% !important;
+			width:59%;
+			left:initial !important;
+			    right: 4%;
 			.arrow{
 				left: initial !important;
 				right: 25px;
@@ -3871,6 +4022,8 @@ input.error, .errorCity {
 				.helvetica-regular;
 				height:29px;
 				text-indent: 5px;
+				
+				width:100%;
 			}
 			.multiple-cities{
 				vertical-align:top;
@@ -3932,7 +4085,7 @@ input.error, .errorCity {
 			}
 			.side-block{
 				margin-top:8px;
-				width:49.3%;
+				width:71%;
 				.in-block;
 				p{
 					font-size: 12px;
