--- a/src/app/home/less/home.less
+++ b/src/app/home/less/home.less
@@ -31,12 +31,12 @@
 					li {
 						a{
 							padding:2px 10px;
-							font-size:12px;
+							font-size:0.875em;
 							.helvetica-medium;
 							color:@primary-dark-color;
 						}
 						&:last-child a, &:first-child a{
-							font-size:15px;
+							font-size:1.063em;
 							padding:0 10px;
 							background-color:@green-hover;
 							color:@color0;
@@ -79,7 +79,7 @@
 					border-top-right-radius: 5px;
 					.ui-grid-header-cell-wrapper {
 						text-transform: uppercase;
-						font-size: 14px;
+						font-size: 1em;
 						line-height:26px;
 						.helvetica-bold;
 						color:@color1;
@@ -106,7 +106,7 @@
 										padding-top: 4px;
 										span{
 											.helvetica-bold;
-											font-size:14px;
+											font-size:1em;
 										}
 									}
 								}
@@ -143,7 +143,7 @@
 				.ui-grid-cell {
 					height: 39px;
 					.helvetica-regular;
-					font-size: 12.5px;
+					font-size:0.906em;
 					padding: 11px 5px 8px 16px;
 					.data_cell {
 						line-height: 1;
@@ -152,7 +152,7 @@
 					.ui-grid-cell-contents {
 						padding: 0;
 						.helvetica-regular;
-						font-size:13px;
+						font-size:0.938em;
 					}
 					input[type="checkbox"] {
 						margin: 11px 0 0 16px;
@@ -236,7 +236,7 @@
 		}
 		input[type=text].ui-grid-filter-input{
 			text-indent:10px;
-			font-size:12px;
+			font-size:0.875em;
 			border-radius:3px;
 			border:1px solid @color21;
 			.helvetica-regular;
@@ -559,7 +559,7 @@ previous button's border...
 }
 
 .fc-unthemed .fc-popover .fc-header .fc-close {
-	font-size: .9em;
+	font-size: 0.9em;
 	margin-top: 2px;
 }
 
@@ -1446,7 +1446,7 @@ be a descendant of the grid when it is being dragged.
 	height: 8px;
 	overflow: hidden;
 	line-height: 8px;
-	font-size: 11px;
+	font-size: 0.813em;
 	font-family: monospace;
 	text-align: center;
 	cursor: s-resize;
@@ -1509,7 +1509,7 @@ be a descendant of the grid when it is being dragged.
 /*Calender Styles*/
 .fc-ltr .fc-basic-view .fc-day-number {
 	text-align: left;
-	font-size: 20px;
+	font-size: 1.375em;
 	.helvetica-bold;
 	color: #a576ca;
 	padding-left: 10px;
@@ -1518,7 +1518,7 @@ be a descendant of the grid when it is being dragged.
 	    position: relative;
 	    top: 20px;
 	    color: #9a9a9a;
-	    font-size:24px;
+	    font-size:1.625em;
 	    .helvetica-regular;
 	    line-height: normal;
 	}
@@ -1542,7 +1542,7 @@ be a descendant of the grid when it is being dragged.
 }
 .fc-event {
 	color: #000;
-	font-size:14px;
+	font-size:1em;
 	.helvetica-regular;
 	padding-left: 10px;
 	position: relative;
@@ -1710,7 +1710,7 @@ be a descendant of the grid when it is being dragged.
 						}
 						.fc-icon {
 							color: #fafafa;
-							font-size:14px;
+							font-size:1em;
 							.helvetica-regular;
 							height: 28px;
 							line-height: 28px;
@@ -1726,14 +1726,14 @@ be a descendant of the grid when it is being dragged.
 					left: -15px;
 				}
 				.fc-icon-right-single-arrow:after {
-					font-size: 24px;
+					font-size: 1.625em;
 					position: absolute;
 					top: -2px;
 					right: -15px;
 				}
 				.fc-center {
 					h2 {
-						font-size:20px;
+						font-size:1.375em;
 						.helvetica-bold;
 					}
 				}
@@ -1749,7 +1749,7 @@ be a descendant of the grid when it is being dragged.
 								.fc-day-header {
 									border: none;
 									color: #fafafa;
-									font-size:16px;
+									font-size:1.125em;
 									.helvetica-regular;
 									padding: 10px 0;
 								}
