--- a/src/app/orderHistory/less/orderHistory.less
+++ b/src/app/orderHistory/less/orderHistory.less
@@ -5,94 +5,103 @@
     padding: 5px 15px 5px;
     box-sizing: border-box;
     width: 100%;
-	overflow:auto;
-	
-	.order-history {
-		h5 {
-			overflow: hidden;
-			font-size:20px;
-			.helvetica-bold;
-			.order-header {
-				line-height: 2;
-				.helvetica-bold;
-				color:@primary-dark-color;
-			}
-			.create-claim {
-				float: right;
-				padding: 8px;
-				color: #54565d;
-			    font-size: 16px;
-			    .helvetica-regular;
-			    line-height:15px;
-			    transition: background-color .5s ease-out;
-				&:hover{
-					background-color: #8c58b5;
-					color:#fff;
-				}
-   			}
-		}
-		.order-grid{
-			box-sizing: border-box;
-			padding:0;
-			margin-bottom:15px;
-			border:1px solid @color21;
-			border-bottom:none;
-			height: initial !important;
-			.ui-grid-render-container-body .ui-grid-viewport{
-				height:initial !important;
-				.ui-grid-canvas .ui-grid-row .ui-grid-cell:last-child{
-					background-color:@color20;
-					border-right:1px solid #ccc;
-					.background-fade;
-					&:hover{
-						background-color:@primary-dark-color;
-						button{
-							color:@color0;
-						}
-					}
-					button{
-						background-color:transparent;
-					}
-				}
-				.ui-grid-canvas .ui-grid-row .ui-grid-cell:first-child {
-					.data_cell{
-						text-decoration: underline;
-						text-decoration-color:@primary-dark-color;
-						text-overflow: ellipsis;
+    overflow:auto;
+    
+    .order-history {
+        h5 {
+            overflow: hidden;
+            font-size:20px;
+            .helvetica-bold;
+            .order-header {
+                line-height: 2;
+                .helvetica-bold;
+                color:@primary-dark-color;
+            }
+            .create-claim {
+                float: right;
+                padding: 8px;
+                color: #54565d;
+                font-size: 16px;
+                .helvetica-regular;
+                line-height:15px;
+                transition: background-color .5s ease-out;
+                &:hover{
+                    background-color: #8c58b5;
+                    color:#fff;
+                }
+            }
+        }
+        .save-input {
+            position: absolute;
+            right: 20px;
+            border: 1px solid #e4e6ea;
+            z-index: 1;
+            top: 108px;
+            border-radius: 2px;
+            padding-left: 5px;
+        }
+        .order-grid{
+            box-sizing: border-box;
+            padding:0;
+            margin-bottom:15px;
+            border:1px solid @color21;
+            border-bottom:none;
+            height: initial !important;
+            .ui-grid-render-container-body .ui-grid-viewport{
+                height:initial !important;
+                .ui-grid-canvas .ui-grid-row .ui-grid-cell:last-child{
+                    background-color:@color20;
+                    border-right:1px solid #ccc;
+                    .background-fade;
+                    &:hover{
+                        background-color:@primary-dark-color;
+                        button{
+                            color:@color0;
+                        }
+                    }
+                    button{
+                        background-color:transparent;
+                    }
+                }
+                .ui-grid-canvas .ui-grid-row .ui-grid-cell:first-child {
+                    .data_cell{
+                        text-decoration: underline;
+                        text-decoration-color:@primary-dark-color;
+                        text-overflow: ellipsis;
                         overflow: hidden;
-					}
-					&:hover .data_cell{
-						color:@primary-dark-color;
-					}
-				}
-				.ui-grid-canvas .ui-grid-row .ui-grid-cell{
-					    border-left: 1px solid #ccc;
-    					border-right: none;
-						height:40px;
-						min-width:14.28% !important;
-						width:14.28% !important;
-						max-width:14.28% !important;
-				}
-				.ui-grid-header-canvas .ui-grid-header-cell-wrapper .ui-grid-header-cell{
-					
-					width:14.28% !important;
-				}
-				.ui-grid-canvas .ui-grid-row{
-					background-color:@color20;
-				}
-			}
-			
-		}
-	}
-	.no-items{
-		font-size:16px;
-		.helvetica-medium;
-		margin-top:15px;
-	}
+                    }
+                    &:hover .data_cell{
+                        color:@primary-dark-color;
+                    }
+                }
+                .ui-grid-canvas .ui-grid-row .ui-grid-cell{
+                        border-left: 1px solid #ccc;
+                        border-right: none;
+                        height:40px;
+                        min-width:14.28% !important;
+                        width:14.28% !important;
+                        max-width:14.28% !important;
+                }
+                .ui-grid-header-canvas .ui-grid-header-cell-wrapper .ui-grid-header-cell{
+                    
+                    width:14.28% !important;
+                }
+                .ui-grid-canvas .ui-grid-row{
+                    background-color:@color20;
+                }
+            }
+            
+        }
+    }
+    .no-items{
+        font-size:16px;
+        .helvetica-medium;
+        margin-top:15px;
+    }
 }
 .ui-grid-header-canvas{
-	width: 100% !important;
-	.ui-grid-header-cell-wrapper{
-		width: 100% !important;
-	}
+    width: 100% !important;
+    .ui-grid-header-cell-wrapper{
+        width: 100% !important;
+    }
 }
