--- a/src/app/buildOrder/less/buildOrder.less
+++ b/src/app/buildOrder/less/buildOrder.less
@@ -2228,7 +2228,7 @@ input.error, .errorCity {
 
 					.estimate-total{
 						font-size:17px;
-						@color1;
+						color:@color1;
 						.helvetica-bold;
 						span{
 						  font-size:17px;
