--- a/src/app/buildOrder/less/buildOrder.less
+++ b/src/app/buildOrder/less/buildOrder.less
@@ -2067,7 +2067,7 @@ input.error, .errorCity {
 				 }
 				 .buyers-list{
 				 	float:left;
-				 	margin-top:20px;
+				 	
 				 	width:53%;
 				 	label{
 				 		font-size:14px;
@@ -2335,7 +2335,7 @@ input.error, .errorCity {
 							font-size: 11px;
 						}
 						.location-addressL2 {
-							    margin: 15px 0px;
+							    
 							    float: left;
 							    width: 100%;
 							.location-city {
@@ -2532,6 +2532,9 @@ input.error, .errorCity {
 						}
 						.checkbox-custom-label{
 							.helvetica-regular;
+						}
+						.checkbox-custom:focus + .checkbox-custom-label:before {
+							border:1px solid #aaa;
 						}
 					}
 					.message-lines {
