--- a/src/app/buildOrder/templates/buildOrder.plp.tpl.html
+++ b/src/app/buildOrder/templates/buildOrder.plp.tpl.html
@@ -20,19 +20,19 @@
 <!-- buildorder search starts -->
 <div cg-busy="{promise:buildOrder.PLPLoader,templateUrl:'common/loading-indicators/templates/view.loading.tpl.html'}"></div>
 <div class="oms_main_container" ng-show='showplp'>
-	<div ng-if="buildOrder.searchval.length > 0" ng-init="buildOrder.cleardata()">
-		<h1 ng-if="buildOrder.searchval.length > 0 && buildOrder.buildorderSearch.length != 0">Search Results for <span>"{{buildOrder.searchval}}"</span> <span class="count">({{buildOrder.buildorderSearch.length}} products)</span></h1>
-		<h1 ng-if="buildOrder.buildorderSearch.length == 0 && buildOrder.searchval.length > 0">No results found for <span>"{{buildOrder.searchval}}"</span></h1>
+	<div ng-if="buildOrder.searchval.length > 2" ng-init="buildOrder.cleardata()">
+		<h1 ng-if="buildOrder.searchval.length > 2 && buildOrder.buildorderSearch.length != 0">Search Results for <span>"{{buildOrder.searchval}}"</span> <span class="count">({{buildOrder.buildorderSearch.length}} products)</span></h1>
+		<h1 ng-if="buildOrder.buildorderSearch.length == 0 && buildOrder.searchval.length > 2">No results found for <span>"{{buildOrder.searchval}}"</span></h1>
 		<ul class="plp-container">
-			<li class="col-md-3" ng-repeat="products in buildOrder.buildorderSearch track by $index" ng-if="buildOrder.searchval.length > 0" >
+			<li class="col-md-4" ng-repeat="products in buildOrder.buildorderSearch track by $index" ng-if="buildOrder.searchval.length > 0" >
 				<div class="plp-block" ng-click="buildOrder.prouctsList(products)">
 					<div class="product_img">
 						<img ng-model="prodImage" ng-src="{{buildOrderPLP.alfrescoAccessURL}}/imagefinder/{{products.ID}}?alf_ticket={{buildOrderPLP.alfrecoTct}}"/>
 					</div>
 					<div class="plp-product-data">
 						<h2>{{products.Name}}</h2>
-						<h3><span class="variant">Size</span> <span>{{products.Size}}</span></h3>
-						<h4><span class="variant">Color</span> <span>{{products.Color}}</span></h4>
+						<h3><span class="variant" ng-if="products.Size!='' && products.Size!=null">Size</span> <span>{{products.Size}}</span></h3>
+						<h4><span class="variant" ng-if="products.Color!='' && products.Color!=null">Color</span> <span>{{products.Color}}</span></h4>
 						<div class="price_lst">
 							<h5>{{products.Price | currency}}</h5>
 						</div>
@@ -46,7 +46,7 @@
 		<h1 ng-if="buildOrder.searchList.length > 0">Search Results for <span>"{{buildOrder.searchTxt}}"</span> <span class="count">({{buildOrder.searchList.length}} products)</span></h1>
 		<!-- <h1 ng-if="buildOrder.searchList.length == 0">No results found for <span>"{{buildOrder.searchTxt}}"</span></h1> -->
 		<ul class="plp-container">
-			<li class="col-md-3" ng-repeat="prod in buildOrder.searchList track by $index">
+			<li class="col-md-4" ng-repeat="prod in buildOrder.searchList track by $index">
 				<div class="plp-block">
 					<div ng-click="buildOrder.prouctsList(prod)">
 						<div class="product_img">
@@ -54,8 +54,8 @@
 						</div>
 						<div class="plp-product-data">
 							<h2 class="product-name-plp"><span>{{prod.Name}}</span></h2>
-							<h3>Color <span>{{prod.Color}}</span></h3>
-							<h4>Size <span>{{prod.Size}}</span></h4>
+							<h3><span class="variant" ng-if="prod.Size!='' && prod.Size!=null">Size</span> <span>{{prod.Size}}</span></h3>
+							<h4><span class="variant" ng-if="prod.Color!='' && prod.Color!=null">Color </span><span>{{prod.Color}}</span></h4>
 							<div class="price_lst">
 								<h5 class="Price">{{prod.Price | currency}}</h5>
 							</div>	
@@ -70,7 +70,7 @@
 		<h1 ng-if="buildOrder.searchSeqList.length > 0">Search Results for <span>"{{buildOrder.prodName}}"</span></h1>
 		<!-- <h1 ng-if="buildOrder.searchSeqList.length == 0">No results found for <span>"{{buildOrder.searchTxt}}"</span></h1> -->
 		<ul class="plp-container">
-			<li class="col-md-3" ng-repeat="prod in buildOrder.searchSeqList track by $index">
+			<li class="col-md-4" ng-repeat="prod in buildOrder.searchSeqList track by $index">
 				<div class="plp-block">
 					<div ng-click="buildOrder.showProduct(prod)">
 						<div class="product_img">
@@ -78,8 +78,8 @@
 						</div>
 						<div class="plp-product-data">
 							<h2 class="product-name-plp"><span>{{prod.Name}}</span></h2>
-							<h3>Color <span>{{prod.xp.SpecsOptions.Color}}</span></h3>
-							<h4>Size <span>{{prod.xp.SpecsOptions.Size}}</span></h4>
+							<h3><span class="variant" ng-if="prod.xp.SpecsOptions.Size!='' && prod.xp.SpecsOptions.Size!=null">Size </span><span>{{prod.xp.SpecsOptions.Size}}</span></h3>
+							<h4><span class="variant" ng-if="prod.xp.SpecsOptions.Color!='' && prod.xp.SpecsOptions.Color!=null">Color</span> <span>{{prod.xp.SpecsOptions.Color}}</span></h4>
 							<div class="price_lst">
 								<h5 class="Price">{{prod.StandardPriceSchedule.PriceBreaks[0].Price | currency}}</h5>
 							</div>	
@@ -94,7 +94,7 @@
 		<h1 ng-if="buildOrder.catList.length > 0">Products under the category <span>"{{buildOrder.catName}}"</span> <span class="count">({{buildOrder.catList.length}} products)</span></h1>
 		<!-- <h1 ng-if="buildOrder.catList.length == 0">No Products found</span></h1> -->
 		<ul class="plp-container">
-			<li class="col-md-3" ng-repeat="prod in buildOrder.catList track by $index">
+			<li class="col-md-4" ng-repeat="prod in buildOrder.catList track by $index">
 				<div class="plp-block">
 					<div ng-click="buildOrder.prouctsList(prod)">
 						<div class="product_img">
@@ -102,8 +102,8 @@
 						</div>
 						<div class="plp-product-data">
 							<h2 class="product-name-plp"><span>{{prod.Name}}</span></h2>
-							<h3>Color <span>{{prod.Color}}</span></h3>
-							<h4>Size <span>{{prod.Size}}</span></h4>
+							<h3><span class="variant" ng-if="prod.Size!='' && prod.Size!=null">Size</span> <span>{{prod.Size}}</span></h3>
+							<h4><span class="variant" ng-if="prod.Color!='' && prod.Color!=null">Color</span> <span>{{prod.Color}}</span></h4>
 							<div class="price_lst">
 								<h5 class="Price">{{prod.Price | currency}}</h5>
 							</div>	
@@ -119,7 +119,7 @@
 		<ul class="row">
 			<li ng-repeat="event in buildOrder.elpLists[0] track by $index" class="col-xs-12 event-item">
 				<div class="event-img col-xs-4">
-					<img src="/assets/images/purple.png" class="img-responsive">
+					<img ng-src="{{buildOrderPLP.alfrescoAccessURL}}/imagefinder/{{event.ID}}?alf_ticket={{buildOrderPLP.alfrecoTct}}" class="img-responsive">
 				</div>
 				<div class="event-details col-xs-8">
 					<h1>{{event.Name}}</h1>
