--- a/src/app/buildOrder/templates/buildOrder.right.tpl.html
+++ b/src/app/buildOrder/templates/buildOrder.right.tpl.html
@@ -16,7 +16,8 @@
 						<form ng-submit="buildOrderRight.updateProdNote($index,prodNotes,buildOrderRight.activeOrders[line][0].ProductID,line,$parent.buildOrderRight)">
 							<input type="text" id="prodNotes{{$index}}" ng-model="prodNotes" ng-init="prodNotes=buildOrderRight.activeOrders[line][0].Product.xp.productNote" ng-show="buildOrderRight.activeOrders[line][0].Product.xp.productNote || buildOrderRight.prodNoteShow{{$index}}" placeholder="Product Note" ng-readonly="!buildOrderRight.readOnly{{$index}}" />
 						</form>
-						<button ng-show="buildOrderRight.activeOrders[line][0].Product.xp.productNote && !buildOrderRight.prodNoteShow{{$index}}" ng-click="buildOrderRight.showNoteField($index)" class="edit-icon">
+						<div ng-show="buildOrderRight.activeOrders[line][0].Product.xp.productNote && !buildOrderRight.prodNoteShow{{$index}}" ng-click="buildOrderRight.showNoteField($index)" class="edit-icon">
+						<button>
 							<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 								 viewBox="0 0 140.5 140" style="enable-background:new 0 0 140.5 140;" xml:space="preserve" fill="#fff">
 							<g>
@@ -101,51 +102,54 @@
 								<polygon points="31.9,111.8 63,102.6 40.6,80.2 	"/>
 							</g>
 							</svg>
-							</button>
-							<button ng-show="buildOrderRight.prodNoteShow{{$index}}" ng-click="buildOrderRight.updateProdNote($index,prodNotes,buildOrderRight.activeOrders[line][0].ProductID,line,$parent.buildOrderRight)" ng-disabled="!prodNotes" class="edit-icon">
-							<svg version="1.1" class="save-icon" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="0 0 49 49" style="enable-background:new 0 0 49 49;" xml:space="preserve">
-<g>
-	<path d="M39.914,0H37.5h-28h-9v49h7h33h8V8.586L39.914,0z M35.5,2v14h-24V2H35.5z M9.5,47V28h29v19H9.5z M46.5,47h-6V26h-33v21h-5
-		V2h7v16h28V2h1.586L46.5,9.414V47z"/>
-	<path d="M13.5,33h7c0.553,0,1-0.447,1-1s-0.447-1-1-1h-7c-0.553,0-1,0.447-1,1S12.947,33,13.5,33z"/>
-	<path d="M23.5,35h-10c-0.553,0-1,0.447-1,1s0.447,1,1,1h10c0.553,0,1-0.447,1-1S24.053,35,23.5,35z"/>
-	<path d="M25.79,35.29c-0.181,0.189-0.29,0.45-0.29,0.71s0.109,0.52,0.29,0.71C25.979,36.89,26.229,37,26.5,37
-		c0.26,0,0.52-0.11,0.71-0.29c0.18-0.19,0.29-0.45,0.29-0.71s-0.11-0.521-0.29-0.71C26.84,34.92,26.16,34.92,25.79,35.29z"/>
-	<path d="M33.5,4h-6v10h6V4z M31.5,12h-2V6h2V12z"/>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-</svg>
-						</button>
+							</button>Edit
+							</div>
+							<div ng-show="buildOrderRight.prodNoteShow{{$index}}" ng-click="buildOrderRight.updateProdNote($index,prodNotes,buildOrderRight.activeOrders[line][0].ProductID,line,$parent.buildOrderRight)" ng-disabled="!prodNotes" class="save-icon">
+							<button>
+							<svg version="1.1"  id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+										 viewBox="0 0 49 49" style="enable-background:new 0 0 49 49;" xml:space="preserve">
+									<g>
+										<path d="M39.914,0H37.5h-28h-9v49h7h33h8V8.586L39.914,0z M35.5,2v14h-24V2H35.5z M9.5,47V28h29v19H9.5z M46.5,47h-6V26h-33v21h-5
+											V2h7v16h28V2h1.586L46.5,9.414V47z"/>
+										<path d="M13.5,33h7c0.553,0,1-0.447,1-1s-0.447-1-1-1h-7c-0.553,0-1,0.447-1,1S12.947,33,13.5,33z"/>
+										<path d="M23.5,35h-10c-0.553,0-1,0.447-1,1s0.447,1,1,1h10c0.553,0,1-0.447,1-1S24.053,35,23.5,35z"/>
+										<path d="M25.79,35.29c-0.181,0.189-0.29,0.45-0.29,0.71s0.109,0.52,0.29,0.71C25.979,36.89,26.229,37,26.5,37
+											c0.26,0,0.52-0.11,0.71-0.29c0.18-0.19,0.29-0.45,0.29-0.71s-0.11-0.521-0.29-0.71C26.84,34.92,26.16,34.92,25.79,35.29z"/>
+										<path d="M33.5,4h-6v10h6V4z M31.5,12h-2V6h2V12z"/>
+									</g>
+									<g>
+									</g>
+									<g>
+									</g>
+									<g>
+									</g>
+									<g>
+									</g>
+									<g>
+									</g>
+									<g>
+									</g>
+									<g>
+									</g>
+									<g>
+									</g>
+									<g>
+									</g>
+									<g>
+									</g>
+									<g>
+									</g>
+									<g>
+									</g>
+									<g>
+									</g>
+									<g>
+									</g>
+									<g>
+									</g>
+									</svg>
+						</button>Save
+						</div>
 					</div>
 					<button class="notes" ng-click="buildOrderRight.GetDeliveryMethods(buildOrderRight.activeOrders[line][0].Product.ID, $index, buildOrderRight.activeOrders[line][0].xp.ProductImageUrl)" popover-trigger="none" popover-placement="bottom-left" popover-is-open="buildOrderRight.showDeliveryToolTip{{$index}}" uib-popover-template="showDeliveryMethods.templateUrl">ADD Recipient</button>
 					<script type="text/ng-template" id="AddRecipientDelMethods.html">
@@ -250,23 +254,24 @@
 										Buyers List</label>
 									</div>
 								</div>
-								<div class="qty">
-									<p>Quantity <span class="star">*</span></p>
-									<input type="number"  ng-class="{error: buildOrderRight.lineItemForm[lineitem.ID].$submitted && buildOrderRight.lineItemForm[lineitem.ID].qty.$invalid}" name="qty" ng-model="lineitem.Quantity" ng-blur="buildOrderRight.GetDeliveryFees(lineitem, buildOrderRight.lineItemForm[lineitem.ID])" ng-min="1" ng-max="999" ng-required="true" />
-									<p ng-if="buildOrderRight.lineItemForm[lineitem.ID].qty.$error.min" style="color:red;"><span>Minimum 1 Qty</span></p>
-									<p ng-if="buildOrderRight.lineItemForm[lineitem.ID].qty.$error.max" style="color:red;"><span>Maximum 999 Qty</span></p>
-								</div>
+							
 								<div class="address-cart">
 									<a ng-click="buildOrderRight.viewAddrBook(lineitem)" ng-if="lineitem.xp.addressType=='Residence' && buildOrderRight.addressbook && buildOrderRight.addressesList.length > 0">Address Book</a>
 									<a ng-click="buildOrderRight.GetAboveAddresses(lineitem)" ng-show="buildOrderRight.TempAddressBook.length > 0 && lineitem.xp.addressType=='Residence'">Address From Cart</a>
 								</div>
 								<div class="receipient-name" ng-init="buildOrderRight.changeAddrType(lineitem.xp.addressType, lineitem, buildOrderRight.lineItemForm[lineitem.ID], 'onload')">
 									<!-- <h3>In Memory Of</h3> -->
-									<div class="firstNm">
+										<div class="qty">
+										<p>Quantity <span class="star">*</span></p>
+										<input type="number"  ng-class="{error: buildOrderRight.lineItemForm[lineitem.ID].$submitted && buildOrderRight.lineItemForm[lineitem.ID].qty.$invalid}" name="qty" ng-model="lineitem.Quantity" ng-blur="buildOrderRight.GetDeliveryFees(lineitem, buildOrderRight.lineItemForm[lineitem.ID])" ng-min="1" ng-max="999" ng-required="true" />
+										<p ng-if="buildOrderRight.lineItemForm[lineitem.ID].qty.$error.min" style="color:red;"><span>Minimum 1 Qty</span></p>
+										<p ng-if="buildOrderRight.lineItemForm[lineitem.ID].qty.$error.max" style="color:red;"><span>Maximum 999 Qty</span></p>
+									</div>
+									<div class="recipient-firstnm">
 										<p>First Name <span class="star">*</span></p>
 										<input type="text"  ng-blur="buildOrderRight.GetDeliveryFees(lineitem, buildOrderRight.lineItemForm[lineitem.ID])" ng-model="lineitem.ShippingAddress.FirstName" name="FirstName" ng-required="true" max-length="100" ng-class="{error: buildOrderRight.lineItemForm[lineitem.ID].$submitted && buildOrderRight.lineItemForm[lineitem.ID].FirstName.$invalid}" />
 									</div>
-									<div>
+									<div class="recipient-firstnm1">
 										<p>Last Name <span class="star">*</span></p>
 										<input type="text"  ng-blur="buildOrderRight.GetDeliveryFees(lineitem, buildOrderRight.lineItemForm[lineitem.ID])" ng-model="lineitem.ShippingAddress.LastName" name="LastName" ng-required="true" max-length="100" ng-class="{error: buildOrderRight.lineItemForm[lineitem.ID].$submitted && buildOrderRight.lineItemForm[lineitem.ID].LastName.$invalid}" />
 									</div>
@@ -364,12 +369,12 @@
 											</div> -->
 										<div class="col-md-6 zipcont">
 											<div class="zipCode">
-												<p>Zip Code <span class="star">*</span></p>
+												<h1>Zip Code <span class="star">*</span></h1>
 												<input type="number" name="zip" ng-minlength="5"  ng-model="lineitem.ShippingAddress.Zip" max-length="5" autocomplete="off" ng-blur="buildOrderRight.GetDeliveryFees(lineitem, buildOrderRight.lineItemForm[lineitem.ID])" required ng-class="{error: buildOrderRight.lineItemForm[lineitem.ID].$submitted && buildOrderRight.lineItemForm[lineitem.ID].zip.$invalid}"></input>
 											</div>
 											</div>
 											<div class="delivery-date col-md-6" ng-if="lineitem.xp.addressType!='InStorePickUp'">
-												<p>Delivery Date <span class="star">*</span></p>
+												<h1>Delivery Date <span class="star">*</span></h1>
 												<p class="input-group">
 												  <input type="text" name="deliverydate" readonly class="form-control" placeholder="MM/DD/YYYY" uib-datepicker-popup="MM/dd/yyyy" ng-model="lineitem.xp.deliveryDate" is-open="lineitem.openCalenderPopUp" datepicker-options="{formatYear: 'yy', minDate: lineitem.xp.MinDays.MinToday, startingDay: 0, dateDisabled:buildOrderRight.disabledDates}" ng-required="lineitem.xp.addressType!='InStorePickUp'" ng-change="buildOrderRight.GetDeliveryFees(lineitem, buildOrderRight.lineItemForm[lineitem.ID])" ng-class="{error: buildOrderRight.lineItemForm[lineitem.ID].$submitted && buildOrderRight.lineItemForm[lineitem.ID].deliverydate.$invalid}" />
 												  <span class="input-group-btn">
@@ -395,15 +400,15 @@
 										<div class="location-addressL1">
 											<h1>Address <span class="star">*</span></h1>
 											<input type="text" name="street1" ng-model="lineitem.ShippingAddress.Street1"  ng-blur="buildOrderRight.GetDeliveryFees(lineitem, buildOrderRight.lineItemForm[lineitem.ID])" placeholder="Street1" required max-length="100" ng-class="{error: buildOrderRight.lineItemForm[lineitem.ID].$submitted && buildOrderRight.lineItemForm[lineitem.ID].street1.$invalid}" />
-											<input type="text" ng-model="lineitem.ShippingAddress.Street2"  ng-blur="buildOrderRight.GetDeliveryFees(lineitem, buildOrderRight.lineItemForm[lineitem.ID])" placeholder="Street2 (optional)" />
+											<input type="text" ng-model="lineitem.ShippingAddress.Street2"  ng-blur="buildOrderRight.GetDeliveryFees(lineitem, buildOrderRight.lineItemForm[lineitem.ID])" placeholder="Street2 (optional)" class="street"/>
 											<div class="location-addressL2">
 											<h6 style="color:red;" ng-if="buildOrderRight.lineItemForm[lineitem.ID].invalidAddress && lineitem.ShippingAddress.Street1 && lineitem.ShippingAddress.Zip">Invalid Address/Zip</h6>
-												<div class="location-city col-md-6" ng-if="lineitem.MultipleCities.length <= 1 || !lineitem.MultipleCities">
-													<p>City <span class="star">*</span></p>
+												<div class="locations-city " ng-if="lineitem.MultipleCities.length <= 1 || !lineitem.MultipleCities">
+													<h1>City <span class="star">*</span></h1>
 													<input type="text" name="city"  ng-model="lineitem.ShippingAddress.City" ng-required="lineitem.MultipleCities.length <= 1 || !lineitem.MultipleCities" ng-class="{error: buildOrderRight.lineItemForm[lineitem.ID].$submitted && buildOrderRight.lineItemForm[lineitem.ID].city.$invalid}" ng-blur="buildOrderRight.DtlsAutoPopulate(lineitem)" />
 												</div>
-												<div class="location-state col-md-6">
-													<p>State <span class="star">*</span></p>
+												<div class="locations-state ">
+													<h1>State <span class="star">*</span></h1>
 													<input type="text" name="state"  ng-model="lineitem.ShippingAddress.State" required ng-class="{error: buildOrderRight.lineItemForm[lineitem.ID].$submitted && buildOrderRight.lineItemForm[lineitem.ID].state.$invalid}" ng-blur="buildOrderRight.DtlsAutoPopulate(lineitem)" />
 												</div>
 												<div class="location-city col-md-6" ng-if="lineitem.MultipleCities.length > 1">
@@ -420,7 +425,7 @@
 													
 											</div>
 											<div class="location-contact">
-												<p>Recipients Phone Number</p>
+												<h1>Recipients Phone Number</h1>
 												<input type="number" name="phone1"  ng-model="lineitem.ShippingAddress.Phone1" placeholder="Area Code" max-length="3" ng-paste="$event.preventDefault()" ng-class="{error: buildOrderRight.lineItemForm[lineitem.ID].$submitted && buildOrderRight.lineItemForm[lineitem.ID].phone1.$invalid}" ng-minlength="3" required ng-blur="buildOrderRight.DtlsAutoPopulate(lineitem)"></input>
 												<input type="number" name="phone2"  ng-model="lineitem.ShippingAddress.Phone2" placeholder="Prefix" max-length="3" ng-paste="$event.preventDefault()" ng-class="{error: buildOrderRight.lineItemForm[lineitem.ID].$submitted && buildOrderRight.lineItemForm[lineitem.ID].phone2.$invalid}" ng-minlength="3" required ng-blur="buildOrderRight.DtlsAutoPopulate(lineitem)"></input>
 												<input type="number" name="phone3"  ng-model="lineitem.ShippingAddress.Phone3" placeholder="Number" max-length="4" ng-paste="$event.preventDefault()" ng-class="{error: buildOrderRight.lineItemForm[lineitem.ID].$submitted && buildOrderRight.lineItemForm[lineitem.ID].phone3.$invalid}" ng-minlength="4" required ng-blur="buildOrderRight.DtlsAutoPopulate(lineitem)"></input>
@@ -519,7 +524,7 @@
 									<h4 ng-repeat="(key, val) in lineitem.xp.deliveryFeesDtls">{{key}} <b ng-if="key=='ServiceFee' && lineitem.xp.DeliveryMethod=='Mixed'"> (50+ Items)</b> <span>{{val | currency}}</span></h4>
 									<!-- <h4 ng-if="lineitem.xp.Discount">Discount <span>-{{lineitem.xp.Discount | currency}}</span></h4> -->
 									<h4 ng-if="lineitem.xp.Tax">Estimated Tax <span>{{ lineitem.xp.Tax | currency }}</span></h4>
-									<h4>Estimate Total<span>{{lineitem.xp.TotalCost | currency}}</span></h4>
+									<p class="estimate-total">Estimate Total<span>{{lineitem.xp.TotalCost | currency}}</span></p>
 								</div>
 							</div>
 						</form>
